# AI-Career-Coach

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yaml
coach/: config.py
coach/services/: RAG_service.py  User_query_service.py  embedding_service.py  llm_service.py  retrival_service.py  vector_service.py
coach/utils/: pdf_parser.py
