[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.12.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "gunicorn>=23.0.0",
    "huggingface-hub>=0.35.3",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-core>=0.3.78",
    "langchain-google-genai>=2.1.12",
    "langchain-huggingface>=0.3.1",
    "pinecone>=7.3.0",
    "pymupdf>=1.26.4",
    "pypdf>=6.1.1",
    "sentence-transformers>=5.1.1",
]
